<resources>
    <string name="app_name">AnimalApp</string>
    <string name="myanimals">I Miei Animali</string>
    <string name="adoptions">Adozioni</string>
    <string name="reports">Segnalazioni</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scansione_qrcode">Scansione QRCODE</string>
    <string name="profilo">Profilo</string>
    <string name="logout">logout</string>
    <string name="logoutSuccess">Logout effettuato con successo</string>
    <string name="selectUserType">Selezionare il ruolo utente</string>
    <string name="registrationError">\"Errore di registrazione: \"</string>
    <string name="RegistrationDone">Utente registrato</string>
    <string name="partitaIvaRequired">Partita Iva obbligatoria</string>
    <string name="denominazioneRequired">Denominazione obbligatoria</string>
    <string name="emailRequired">Email obbligatoria</string>
    <string name="passwordRequired">Password obbligatoria</string>
    <string name="passwordRepeatRequired">Le password non combaciano</string>
    <string name="teleponeRequired">Numero di telefono obbligatorio</string>
    <string name="addressRequired">Indirizzo obbligatorio</string>
    <string name="nameRequired">Nome obbligatorio</string>
    <string name="surnameRequired">Cognome obbligatorio</string>
    <string name="dateBornRequired">Data di nascita obbligatoria</string>
    <string name="cfRequired">CF obbligatorio</string>
    <string name="efnoviRequired">Codice EFNOVI obbligatorio</string>
    <string name="registrazione">Registrazione</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="telefono">Telefono</string>
    <string name="indirizzo">Strada, Civico</string>
    <string name="numero_efnovi">Numero EFNOVI</string>
    <string name="partita_iva">Partita Iva</string>
    <string name="denominazione">Denominazione</string>
    <string name="ente_privato">Ente Privato</string>
    <string name="codice_fiscale_associazione">Codice Fiscale Associazione</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="registrati">Registrati</string>
    <string name="gi_registrato">Già registrato?</string>
    <string name="effettua_il_login">Effettua il Login</string>
    <string name="userLogged">Utente loggato!</string>
    <string name="loginError">\"Errore nel Login: \"</string>
    <string name="registra_animale">Registra animale</string>
    <string name="animaleAggiunto">Animale Aggiunto</string>
    <string name="citta">Città</string>
    <string name="minimum11cifre">Numero di telefono deve avere almeno 11 cifre</string>
    <string name="completaIcampi">Completa bene i campi segnalati in rosso!</string>
    <string name="mincf">Codice fiscale deve essere minimo di 11 caratteri</string>
    <string name="registratiAffermazione">Registrati!</string>
    <string name="non_ancora_registrato">Non ancora registrato?</string>
    <string name="login">Login</string>
    <string name="anagrafica">Anagrafica</string>
    <string name="spese">Spese</string>
    <string name="libretto_sanitario">Libretto sanitario</string>
    <string name="download_dati">download dati</string>
    <string name="genereRequired">Genere obbligatorio</string>
    <string name="specieRequired">Specie obbligatoria</string>
    <string name="nonSonoIlPropiet">NON sono il proprietario, voglio assistere l\'animale</string>
    <string name="eassistito">L\'animale è assistito</string>
    <string name="noneassistito">L\'animale ha una proprietà</string>
    <string name="animaleSpinnerSegnalazione">Animale</string>
    <string-array name="Sesso">
        <item>Maschio</item>
        <item>Femmina</item>
    </string-array>
    <string-array name="statoTrattamento">
        <item>Completato</item>
        <item>Non eseguito</item>
        <item>Da rifare</item>
    </string-array>
    <string-array name="Ruolo">
        <item>Proprietario / Assistente animale</item>
        <item>Veterinario</item>
        <item>Associazione</item>
        <item>Ente</item>
    </string-array>
    <string name="title_activity_adozione">AdozioneActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="proprietario">Proprietario</string>
    <string name="SelezioneVuota">Selezionare animale da inserire</string>
    <string name="AnimaliAggiungiInBachecaAdozioni">Animali aggiunti nella bacheca adozioni</string>
    <string name="AnimaleAggiuntoInBachecaAdozioni">Animale aggiunto nella bacheca adozioni</string>
    <string name="AggiuntoListaPreferiti">Animale aggiunto nella lista preferiti</string>
    <string name="ConfermaEliminaAnnuncio">Sei sicuro di voler eliminare l\'annuncio definitivamente?</string>
    <string name="fine_carico">Fine Carico</string>
    <string name="costo_carico">Costo Carico</string>
    <string name="conferma">Conferma</string>
    <string name="modifica_microchip">Modifica microchip</string>
    <string name="microchip_non_presente">Microchip non presente</string>
    <string name="filtri">FILTRI</string>
    <string name="i_miei_annunci">I miei annunci</string>
    <string name="generali">Generali</string>
    <string name="preferiti">Preferiti</string>
    <string name="scegli_immagine_animale">Scegli immagine animale</string>
    <string name="genere">Genere</string>
    <string name="specie">Specie</string>
    <string name="data_ritrovamento">Data Ritrovamento</string>
    <string name="box_dell_animale">Box dell\'animale</string>
    <string name="microchip">Microchip</string>
    <string name="descrizione">Descrizione</string>
    <string name="scannerrizza_un_animale">Scannerrizza un animale!</string>
    <string name="titolo">Titolo</string>
    <string name="link">Link</string>
    <string name="smarrimento">Smarrimento</string>
    <string name="animale_ferito">Animale Ferito</string>
    <string name="pericolo">Pericolo</string>
    <string name="news">News</string>
    <string name="raccolta_fondi">Raccolta Fondi</string>
    <string name="ritrovamento">Ritrovamento</string>
    <string name="data_segnalazione_sanitaria">Data segnalazione sanitaria</string>
    <string name="dettagli_visita">Dettagli visita</string>
    <string name="e_un_esame_specifico_n_es_vaccinazione_sverminazione_ecc">E\' UN ESAME SPECIFICO \n(es. vaccinazione, sverminazione, ecc.)</string>
    <string name="motivo_consultazione">Motivo consultazione</string>
    <string name="diagnosi">Diagnosi</string>
    <string name="farmaci">Farmaci</string>
    <string name="trattamento">Trattamento</string>
    <string name="note_finali_e_stato_trattamento">Note finali e stato trattamento</string>
    <string name="e_andato_tutto_a_buon_fine">E\' andato tutto a buon fine</string>
    <string name="registra_segnalazione_sanitaria">Registra Segnalazione sanitaria</string>
    <string name="data_della_spesa">Data della spesa</string>
    <string name="categoria">Categoria</string>
    <string name="quantit">Quantità</string>
    <string name="costo_unitario">Costo Unitario</string>
    <string name="registra_spesa">Registra spesa</string>
    <string name="cambia_immagine">Cambia immagine</string>
    <string name="sesso">Sesso</string>
    <string name="nascita">Nascita</string>
    <string name="assistito">Assistito</string>
    <string name="data_di_ritrovamento_sconosciuta">Data di ritrovamento sconosciuta</string>
    <string name="box_non_specificato">Box non specificato</string>
    <string name="qrcode">qrCode</string>
    <string name="scatta_foto">Scatta Foto</string>
    <string name="registra_nuovo_animale">Registra Nuovo Animale</string>
    <string name="gestione_animali_in_carico">GESTIONE ANIMALI IN CARICO</string>
    <string name="richiedi_carico">Richiedi Carico</string>
    <string name="per_visualizzare_i_tuoi_animali">Per visualizzare i tuoi animali</string>
    <string name="reset">Reset</string>
    <string name="le_tue_segnalazioni">Le tue segnalazioni</string>
    <string name="seganalazioni_altri_utenti">Seganalazioni altri utenti</string>
    <string name="invia_richiesta">Invia richiesta</string>
    <string name="cedi_propriet_animale">Cedi proprietà animale</string>
    <string name="controlla_se_presente_una_segnalazione_in">Controlla se è presente una segnalazione in:</string>
    <string name="smarrimenti">Smarrimenti</string>
    <string name="carica_immagine_animale">Carica immagine animale</string>
    <string name="localizzami_automaticamente">Localizzami automaticamente</string>
    <string name="crea_segnalazione">Crea segnalazione</string>
    <string name="mappa">Mappa</string>
    <string name="data">data</string>
    <string name="segnalazione_fatta_da">Segnalazione fatta da</string>
    <string name="tipoduepunti">Tipo:</string>
    <string name="titoloduepunti">Titolo:</string>
    <string name="data_pubblicazioneduepunti">Data Pubblicazione:</string>
    <string name="spesa_totale">Spesa totale</string>
    <string name="aggiungi_ai_preferiti">Aggiungi ai preferiti</string>
    <string name="box">Box</string>
    <string name="seleziona_dispositivo">Seleziona Dispositivo</string>
    <string name="l_esame_e_andato_a_buon_fine">L\'esame è andato a buon fine.\nLo stato trattamento è:\n</string>
    <string name="l_esame_non_e_andato_a_buon_fine">L\'esame NON è andato a buon fine.\nLo stato trattamento è:\n</string>
    <string name="la_visita_e_andata_a_buon_fine">La visita è andata a buon fine.\nLo stato trattamento è:\n</string>
    <string name="la_visita_non_e_andata_a_buon_fine">La visita NON è andata a buon fine.\nLo stato trattamento è:\n</string>
    <string name="segnalazione_fatta_dal_proprietario">Segnalazione fatta dal proprietario e NON certificata</string>
    <string name="segnalazione_fatta_dal_veterinario">Segnalazione fatta dal veterinario e CERTIFICATA</string>
    <string name="questa_segnalazione_è_modificabile_solo_dal_vet_che_l_ha_fatta">Questa segnalazione è modificabile solo dal veterinario che l\'ha fatta!</string>
    <string name="dettagli">Dettagli</string>
    <string name="aggiungi_adozione">Aggiungi adozione</string>
    <string name="consiglio_accettare_permessi">Per poter utilizzare questa applicazione con tutte le sue funzionalità, è consigliato accettare i permessi</string>
    <string name="ho_capito">Ho capito</string>
    <string name="magari_piu_tardi">Magari più tardi</string>
    <string name="rilevazione">Rilevazione!</string>
    <string name="aggiunto">Aggiunto!</string>
    <string name="errore">Errore!</string>
    <string name="impossibile_aggiungere_nessun_risultato">Impossibile aggiungere - NESSUN RISULTATO!</string>
    <string name="impossibile_aggiungere_non_successo">Impossibile aggiungere! - non successo</string>
    <string name="aggiungi_animale">Aggiungi Animale</string>
    <string name="sesso_obbligatorio">Sesso obbligatorio</string>
    <string name="inserire_una_immagine_del_profilo">Inserire una immagine del profilo</string>
    <string name="seleziona_una_data">Seleziona una data</string>
    <string name="seleziona_almeno_un_animale">Seleziona almeno un animale</string>
    <string name="se_lo_specialista_si_trova_vicino_a_te">Se lo specialista si trova vicino a te è possibile inviare l\'incarico tramite Bluetooth.\n</string>
    <string name="seleziona_modalita_invio_carico">Seleziona la modalità di invio Incarico</string>
    <string name="modalita_invio_carico">Modalità invio incarico</string>
</resources>