<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modifica_microchip"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/microchip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/microchip_non_presente"
        android:minHeight="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/conferma"
        android:id="@+id/submit_button"/>
</LinearLayout>