<LinearLayout
    android:id="@+id/mainFragAnimale"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.main_fragment"
    android:orientation="vertical">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

       >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anagrafica" />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spese"
          />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libretto_sanitario" />
    </com.google.android.material.tabs.TabLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anagrafica" />



        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libretto_sanitario" />
    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>