<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout

        android:id="@+id/zonaPericolosaLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        tools:context="fragments_segnalazioni.animale_in_pericolo_fragments">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgZonaPericolosa"
            android:layout_width="200dp"
            android:layout_height="200dp"
            tools:src="@tools:sample/avatars"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/scattaFotoZona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scatta_foto" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titoloZonaPericolosa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titolo"
                android:text="Attenzione!!" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descrzioneZonaPericolosa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descrizione"
                android:text="C'è un pericolo in questa zona" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">
        <fragment
            android:id="@+id/autoCompleteZona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            />
        </androidx.cardview.widget.CardView>



    </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confermaZonaPericolosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="?android:attr/textCheckMark" />






</FrameLayout>