<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myAnimalsFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.myanimals_fragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleMyAnimals"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/recycle_view_animals"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noLoggedLayoutMyAnimals"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/noLogAnimalsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="Per visualizzare i tuoi animali"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.539"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.449" />

        <TextView
            android:id="@+id/tvLoginMyAnimals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:contextClickable="true"
            android:fontFamily="sans-serif-black"
            android:minHeight="48dp"
            android:text="@string/effettua_il_login"
            android:textColor="@color/purple_500"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noLogAnimalsText" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/non_ancora_registrato"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.283"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginMyAnimals" />

        <TextView
            android:id="@+id/tvRegisterHereMyAnimals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp"
            android:text="@string/registrati"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginMyAnimals" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/aggiungiAnimaliBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        tools:ignore="SpeakableTextPresentCheck"
        />
</FrameLayout>